src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>crms11__Account_Discount__c</fullName>
        <description>Applied account discount.</description>
        <inlineHelpText>Applied account discount.</inlineHelpText>
        <label>Account Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Client_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is automatically set to true if the product has a Client Price set on the Account</inlineHelpText>
        <label>Client Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Contribution__c</fullName>
        <description>Contribution calculates margin on sale, (As UnitPrice - Unit_Cost__c)</description>
        <formula>IF($Setup.crms11__FlexPricer_Settings__c.crms11__Disable_Contribution_Calculation__c, IF(  ISNULL(crms11__Unit_Cost__c), NULL , TotalPrice  - ( Quantity  * crms11__Unit_Cost__c ) ), NULL)</formula>
        <inlineHelpText>Contribution calculates margin on sale</inlineHelpText>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crms11__Dated_Product_Discount__c</fullName>
        <label>Dated Product Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Default_Quantity_Multiplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default quantity multiplier is used to calculated bulk quantity to calculate bulk units. For example if multiplier is 0.001. Quantity = Actual Quantity * Multiplier.</description>
        <inlineHelpText>Default quantity multiplier is used to calculated bulk quantity to calculate bulk units. For example if multiplier is 0.001. Quantity = Actual Quantity * Multiplier.</inlineHelpText>
        <label>Quantity Rate</label>
        <referenceTo>crms11__Quantity_Rate__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Default_For_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__Is_Bundle_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is automatically set to true if the product is part of a Bundle</inlineHelpText>
        <label>Is Bundle Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Is_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is automatically set to true if the product is a Bundle Product</inlineHelpText>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>crms11__Location__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Manager_Discount__c</fullName>
        <description>A discount  which can be applied to an opportunity by the Sales Manager as a ‘special discount’</description>
        <label>Manager Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Matrix_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matrix Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Original_Quantity__c</fullName>
        <inlineHelpText>For products that are part of the bundle this field hold the original quantity of the product that is offered is the customer selects a single quantity of the Bundle Product</inlineHelpText>
        <label>Original Quantity</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Product_Type_Id__c</fullName>
        <inlineHelpText>This field contains the Id of the Product to which this OpportunityLineItem is related incase it is part of a Bundle</inlineHelpText>
        <label>Product Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Product_Type__c</fullName>
        <label>Product Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Quantity_X__c</fullName>
        <label>Quantity X</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Quantity_Y__c</fullName>
        <description>User Entered Quantity Rate Multiplier 1</description>
        <inlineHelpText>User Entered Quantity Rate Multiplier 1</inlineHelpText>
        <label>Quantity Y</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Quantity_Z__c</fullName>
        <description>User Entered Quantity Rate Multiplier 2</description>
        <inlineHelpText>User Entered Quantity Rate Multiplier 2</inlineHelpText>
        <label>Quantity Z</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Related_To__c</fullName>
        <inlineHelpText>This field contains the Id of the OpportunityLineItem to which this current OpportunityLineItem is related incase it is part of a Bundle</inlineHelpText>
        <label>Related To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Sales_Price_Edit_Discount__c</fullName>
        <description>Discount applied on original sales price.</description>
        <inlineHelpText>Discount applied on original sales price.</inlineHelpText>
        <label>Sales Price Edit Discount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Sort_Order__c</fullName>
        <description>This field holds the position number of opportunity product on Flexpricer page.</description>
        <inlineHelpText>This field holds the position number of opportunity product on Flexpricer page.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__Sync_Id__c</fullName>
        <formula>IF( NOT(ISBLANK(Opportunity.SyncedQuoteId))
   ,Opportunity.SyncedQuote.Id+&apos;-&apos;+PricebookEntryId+&apos;-&apos;+TEXT(CEILING(Quantity))+&apos;-&apos;+TEXT(CEILING(UnitPrice))+&apos;-&apos;+TEXT(CEILING(Discount))+&apos;-&apos;+Description  
   ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Total_Discount__c</fullName>
        <description>Total applied discount including custom discount and standard discount. Based on the list price.</description>
        <inlineHelpText>Total applied discount to original list price.</inlineHelpText>
        <label>Total Discount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Unit_Cost__c</fullName>
        <description>Stores the unit cost of the product.</description>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crms11__Use_Opp_Close_Date__c</fullName>
        <formula>ISBLANK(crms11__Start_Date__c) &amp;&amp; ISBLANK(crms11__End_Date__c) &amp;&amp; ISBLANK(Opportunity.crms11__Default_End_Date__c) &amp;&amp; ISBLANK(Opportunity.crms11__Default_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Opp Close Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__User_Discount__c</fullName>
        <description>A discount which can be applied to an opportunity by the account manager as a ‘special discount’</description>
        <label>User Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>crms11__Volume_Discount__c</fullName>
        <inlineHelpText>The discount percent applicable based on volume purchase of this product</inlineHelpText>
        <label>Volume Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>